Closed Bug 770407 Opened 13 years ago Closed 13 years ago

Assertion failure: JS_ObjectIsFunction(__null, this)

Categories

(Core :: JavaScript Engine, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: jruderman, Assigned: luke)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file stack trace
var otherGlobal = newGlobal("same-compartment"); var proxy = otherGlobal.Proxy.create({}, {}); Int8Array.set(proxy); Assertion failure: JS_ObjectIsFunction(__null, this), at js/src/jsfun.h:193 The first bad revision is: changeset: 68c396f305f4 user: Luke Wagner date: Wed Jun 20 08:57:29 2012 -0700 summary: Bug 755186 - rm JS_NewGlobalObject (r=jorendorff)
The test-case repros before bug 755186 with s/same-compartment/new-compartment/. (After bug 755186, all newGlobal() create a new compartment -- the argument is now ignored.) Steve: I'm guessing this assert is innocuous, is that right?
No longer blocks: 755186
var otherGlobal = newGlobal("new-compartment"); var proxy = otherGlobal.Proxy.create({}, {}); Int8Array.set(proxy); The first bad revision is: changeset: 807490eb9bbd user: Luke Wagner date: Mon Jun 04 16:34:45 2012 -0700 summary: Bug 761439 - Make IndirectProxyHandler::nativeCall indirect (r=sfink)
Blocks: 761439
Attached patch rmSplinter Review
The assert is overzealous. I'm not sure if the property it is trying to ensure is even something we generally want anymore. Waldo will actually be overhauling this area pretty soon.
Assignee: general → luke
Status: NEW → ASSIGNED
Attachment #638888 - Flags: review?(jwalden+bmo)
Attachment #638888 - Flags: review?(jwalden+bmo) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/testBug770407.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: