Bug 770407 - Remove overzealous assert in CrossCompartmentWrapper::nativeCall (r=waldo)

--HG--
extra : rebase_source : 3ba26a72d57b6af9854814a7ccca5c66dad2a597