js/src/jit-test/tests/basic/testBug770407.js
@@ -1,0 +1,4 @@
+// |jit-test| error:TypeError
+var otherGlobal = newGlobal("new-compartment");
+var proxy = otherGlobal.Proxy.create({}, {});
+Int8Array.set(proxy);
